# qna

./: .env_template  .gitignore  README.md  app.py  bm25_통합 Q&A_상품탐색_유형 분류 중간결과_1018_납품.json  pyproject.toml  user_dict_1018.txt  체계v0.4.csv
chains/: README.md  classification.py  default.py  example_selector.py  rag.py  schemas.py
data/: 통합 Q&A_상품탐색_1018 납품_TEXTNET 사내용_QA_정렬(1030)_작업용 - _대표질의 일부_1115_15_08_id수정.csv  통합 Q&A_상품탐색_1018 납품_TEXTNET 사내용_QA_정렬(1030)_작업용 - _대표질의 일부_1115_15_08_id수정.numbers
pages/: App.py  DataFrame.py  Parse.py  RAG.py  Upload_Data.py
scraper/: README.md  helpers.py  naver_cafe.py  naver_kin.py  naver_login.py
vectorstore/: README.md  embedding.py  pinecone.py  sparse.py
